--- a/src/styles.css
+++ b/src/styles.css
@@ -5,10 +5,32 @@ body {
   background-color: #f5f5f5;
 }
 
-h2, h3 {
+h2,
+h3 {
   color: #333;
 }
 
 img {
   display: block;
+}
+
+/* Global Variables */
+:root {
+  --primary-color: #5b463f;
+  --secondary-color: #f9f9f9;
+  --text-color: #333;
+  --muted-text-color: #777;
+}
+
+/* Global Styles */
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  background-color: #fefefe;
+  color: #333;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
